@@ -29,14 +29,11 @@ package edu.umd.cs.findbugs.config;
 import java.io.BufferedInputStream;
 import java.io.BufferedOutputStream;
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.LinkedList;
@@ -166,7 +163,7 @@ public class UserPreferences implements Cloneable {
             return;
         }
         try {
-            read(new FileInputStream(prefFile));
+            read(Files.newInputStream(prefFile.toPath()));
         } catch (IOException e) {
             // Ignore - just use default preferences
         }
@@ -266,7 +263,7 @@ public class UserPreferences implements Cloneable {
     public void write() {
         try {
             File prefFile = new File(SystemProperties.getProperty("user.home"), PREF_FILE_NAME);
-            write(new FileOutputStream(prefFile));
+            write(Files.newOutputStream(prefFile.toPath()));
         } catch (IOException e) {
             if (FindBugs.DEBUG) {
                 e.printStackTrace(); // Ignore
@@ -732,7 +729,7 @@ public class UserPreferences implements Cloneable {
      */
     public void resolveRelativePaths(String preferencesPath) {
         try {
-            Path prefsDir = Paths.get(preferencesPath).getParent();
+            Path prefsDir = Path.of(preferencesPath).getParent();
             if (prefsDir == null || !Files.isDirectory(prefsDir)) {
                 return; // no parent directory, nothing to resolve
             }
@@ -754,7 +751,7 @@ public class UserPreferences implements Cloneable {
     }
 
     private static String resolveRelativePath(final String maybeRelativePath, Path prefsDir) {
-        Path filterPath = Paths.get(maybeRelativePath);
+        Path filterPath = Path.of(maybeRelativePath);
         if (filterPath.isAbsolute()) {
             return maybeRelativePath;
         }
